--- a/src/Src/BouncyHsm.Spa/Shared/Common/StorageObjectIcon.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/Common/StorageObjectIcon.razor
@@ -32,6 +32,8 @@
             CKO.CKO_PUBLIC_KEY => "icon-unlocked",
             CKO.CKO_SECRET_KEY => "icon-Privacy",
             CKO.CKO_VENDOR_DEFINED => "icon-Integrated-Circuit",
+            CKO.CKO_TRUST => "icon-Security-Checked",
+            CKO.CKO_VALIDATION => "icon-Check-File",
             _ => throw new InvalidProgramException($"Enum value {this.Cko} is not supported.")
         };
 
