--- a/src/Src/BouncyHsm.Spa/Pages/PkcsPages/ImportPem.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/PkcsPages/ImportPem.razor
@@ -100,6 +100,11 @@
                     <ValidationMessage For="() => this.model.ForEncryption" />
                 </div>
                 <div class="mb-1 form-check">
+                    <InputCheckbox class="form-check-input" id="i-encapsulation" @bind-Value="this.model.ForEncapsulation" />
+                    <label class="form-check-label" for="i-encapsulation">For encapsulation and decapsulation</label>
+                    <ValidationMessage For="() => this.model.ForEncapsulation" />
+                </div>
+                <div class="mb-1 form-check">
                     <InputCheckbox class="form-check-input" id="i-wrap" @bind-Value="this.model.ForWrap" />
                     <label class="form-check-label" for="i-wrap">For wrap and unwrap</label>
                     <ValidationMessage For="() => this.model.ForWrap" />
@@ -233,6 +238,7 @@ W4lThm/Ii+bRe5LPUsWiND6uHNYaobZKHJr0QC9au+o=
             {
                 ForDerivation = this.model.ForDerivation,
                 ForEncryption = this.model.ForEncryption,
+                ForEncapsulation = this.model.ForEncapsulation,
                 ForSigning = this.model.ForSigning,
                 ForWrap = this.model.ForWrap,
                 ImportMode = this.model.ImportMode
