#52 Add supported functions for ML-KEM keys

--- a/src/Src/BouncyHsm.Spa/Pages/GenerateKeyPages/GenerateKey.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/GenerateKeyPages/GenerateKey.razor
@@ -38,6 +38,7 @@ else
                         <option value="@GeneratedKeyType.Mongomery">Mongomery curve key pair</option>
                         <option value="@GeneratedKeyType.MlDsa">ML-DSA key pair</option>
                         <option value="@GeneratedKeyType.SlhDsa">SLH-DSA key pair</option>
+                        <option value="@GeneratedKeyType.MlKem">SLH-KEM key pair</option>
                         <option value="@GeneratedKeyType.Aes">AES key</option>
                         <option value="@GeneratedKeyType.Poly1305">POLY1305 key</option>
                         <option value="@GeneratedKeyType.ChaCha20">ChaCha20 key</option>
@@ -73,6 +74,10 @@ else
             {
                 <GenerateSlhDsaKeys SlotId="@this.SlotId" OnLoadingChanged="e => this.isInLoading = e" />
             }
+            else if (this.KeyType == GeneratedKeyType.MlKem)
+            {
+                <GenerateMlKemKeys SlotId="@this.SlotId" OnLoadingChanged="e => this.isInLoading = e" />
+            }
             else if (this.KeyType == GeneratedKeyType.Aes)
             {
                 <GenerateAesKey SlotId="@this.SlotId" OnLoadingChanged="e=>this.isInLoading = e" />
@@ -98,7 +103,7 @@ else
 }
 
 @code {
-    internal enum GeneratedKeyType { None, Rsa, Ec, Edwards, Mongomery, MlDsa, SlhDsa, Aes, Poly1305, ChaCha20, Salsa20, Secret }
+    internal enum GeneratedKeyType { None, Rsa, Ec, Edwards, Mongomery, MlDsa, SlhDsa, MlKem, Aes, Poly1305, ChaCha20, Salsa20, Secret }
 
     [Parameter]
     public int SlotId
