--- a/src/Src/BouncyHsm.Spa/Shared/ForGenerateKey/GenerateEcKeys.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/ForGenerateKey/GenerateEcKeys.razor
@@ -169,6 +169,7 @@ else
             this.ForEncryption = false;
             this.ForSigning = true;
             this.ForDerivation = true;
+            this.ForEncapsulation = false;
         }
 
         internal GenerateEcKeyPairRequestDto ToDto()
