--- a/src/Src/BouncyHsm.Spa/Shared/ForGenerateKey/GenerateMongomeryKeys.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/ForGenerateKey/GenerateMongomeryKeys.razor
@@ -172,6 +172,7 @@ else
             this.ForEncryption = false;
             this.ForSigning = false;
             this.ForDerivation = true;
+            this.ForEncapsulation = false;
         }
 
         internal GenerateMontgomeryKeyPairRequestDto ToDto()
