--- a/src/Src/BouncyHsm.Spa/Shared/ForGenerateKey/GenerateRsaKeys.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/ForGenerateKey/GenerateRsaKeys.razor
@@ -159,6 +159,7 @@ else
             this.ForEncryption = false;
             this.ForSigning = true;
             this.ForDerivation = false;
+            this.ForEncapsulation = false;
         }
 
         internal GenerateRsaKeyPairRequestDto ToDto()
