--- a/src/Src/BouncyHsm.Spa/Shared/ForGenerateKey/GenerateSlhDsaKeys.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/ForGenerateKey/GenerateSlhDsaKeys.razor
@@ -165,6 +165,7 @@ else
             this.ForEncryption = false;
             this.ForSigning = true;
             this.ForDerivation = false;
+            this.ForEncapsulation = false;
         }
 
         internal GenerateSlhDsaKeyPairRequestDto ToDto()
