--- a/src/Src/BouncyHsm.Spa/Shared/ForGenerateKey/GenerateEdwardsKeys.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/ForGenerateKey/GenerateEdwardsKeys.razor
@@ -172,6 +172,7 @@ else
             this.ForEncryption = false;
             this.ForSigning = true;
             this.ForDerivation = false;
+            this.ForEncapsulation = false;
         }
 
         internal GenerateEdwardsKeyPairRequestDto ToDto()
