--- a/src/Src/BouncyHsm.Spa/Pages/SupportedAlgorithms.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/SupportedAlgorithms.razor
@@ -48,6 +48,7 @@ else
                 <th>Generate key pair</th>
                 <th>Generate key</th>
                 <th>Wrap, Unwrap</th>
+                <th>Encapsulate, Decapsulate</th>
             </tr>
         </thead>
         <tbody>
@@ -65,6 +66,7 @@ else
                     <td class="text-center" title="Generate key pair">@ShowFlag(mi.Flags.GenerateKeyPair)</td>
                     <td class="text-center" title="Generate key">@ShowFlag(mi.Flags.Generate)</td>
                     <td class="text-center" title="Wrap, Unwrap">@ShowFlag(mi.Flags.Wrap, mi.Flags.Unwrap)</td>
+                    <td class="text-center" title="Encapsulate, Decapsulate">@ShowFlag(mi.Flags.Encapsulate, mi.Flags.Decapsulate)</td>
                 </tr>
             }
         </tbody>
