--- a/src/Src/BouncyHsm.Spa/Pages/SupportedAlgorithms.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/SupportedAlgorithms.razor
@@ -29,9 +29,9 @@ else
     }
 
     <p>
-        Supported mechanisms are by default for PKCS#11 specification <a href="https://docs.oasis-open.org/pkcs11/pkcs11-curr/v2.40/os/pkcs11-curr-v2.40-os.pdf" target="_blank">version 2.40</a>,
-        and native APIs are also used for it.
+        Supported mechanisms are by default for PKCS#11 specification <a href="https://docs.oasis-open.org/pkcs11/pkcs11-curr/v2.40/os/pkcs11-curr-v2.40-os.pdf" target="_blank">version 2.40</a>.
         <em>Bouncy&nbsp;Hsm</em> allows the use of some mechanisms from PKCS#11 specification <a href="https://docs.oasis-open.org/pkcs11/pkcs11-spec/v3.1/os/pkcs11-spec-v3.1-os.pdf" target="_blank">version 3.1</a>
+        and PKCS#11 specification <a href="https://docs.oasis-open.org/pkcs11/pkcs11-spec/v3.2/pkcs11-spec-v3.2.pdf" target="_blank">version 3.2</a>.
     </p>
 
     <table class="table table-responsive-md table-striped table-bordered">
