#52 Add documentation for PQC keys

--- a/src/Src/BouncyHsm.Spa/Shared/ForGenerateKey/GenerateEcKeys.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/ForGenerateKey/GenerateEcKeys.razor
@@ -119,7 +119,8 @@ else
     protected override async Task OnInitializedAsync()
     {
         this.editContext = new EditContext(this.model);
-        this.curveNames = (await this.bouncyHsmClient.GetSupportedEcCurvesAsync())
+        this.curveNames = (await this.bouncyHsmClient.GetSupportedKeysAsync())
+        .EcCurves
         .Select(t => t.Name)
         .ToList();
     }
