--- a/src/Src/BouncyHsm.Spa/Shared/ForGenerateKey/GenerateMongomeryKeys.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/ForGenerateKey/GenerateMongomeryKeys.razor
@@ -120,7 +120,8 @@ else
     protected override async Task OnInitializedAsync()
     {
         this.editContext = new EditContext(this.model);
-        this.curveNames = (await this.bouncyHsmClient.GetSupportedMontgomeryCurvesAsync())
+        this.curveNames = (await this.bouncyHsmClient.GetSupportedKeysAsync())
+        .MontgomeryCurves
         .Select(t => t.NamedCurve!)
         .ToList();
 
