--- a/src/Src/BouncyHsm.Spa/Pages/About.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/About.razor
@@ -26,7 +26,7 @@
                     </tr>
                     <tr>
                         <td scope="row">PKCS#11 standard version</td>
-                        <td>@this.version.P11Version</td>
+                        <td>@string.Join(", ", this.version.P11Versions)</td>
                     </tr>
                     <tr>
                         <td scope="row">Bouncy Castle version</td>
