--- a/src/Src/BouncyHsm.Spa/Pages/SupportedAlgorithms.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/SupportedAlgorithms.razor
@@ -159,6 +159,78 @@ else
                     </tbody>
                 </table>
             }
+
+            <h2>ML-DSA</h2>
+            @if (this.mlDsa == null)
+            {
+                <BouncyHsm.Spa.Shared.Common.LoadingIndicator />
+            }
+            else
+            {
+                <table class="table table-responsive-md table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Key</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (string name in this.mlDsa)
+                        {
+                            <tr>
+                                <td>@name</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            }
+
+            <h2>SLH-DSA</h2>
+            @if (this.slhDsa == null)
+            {
+                <BouncyHsm.Spa.Shared.Common.LoadingIndicator />
+            }
+            else
+            {
+                <table class="table table-responsive-md table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Key</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (string name in this.slhDsa)
+                        {
+                            <tr>
+                                <td>@name</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            }
+
+            <h2>ML-KEM</h2>
+            @if (this.mlKem == null)
+            {
+                <BouncyHsm.Spa.Shared.Common.LoadingIndicator />
+            }
+            else
+            {
+                <table class="table table-responsive-md table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Key</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (string name in this.mlKem)
+                        {
+                            <tr>
+                                <td>@name</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            }
         }
     }
 }
@@ -169,6 +241,9 @@ else
     private IList<CurveInfoDto>? curves = null;
     private IList<CurveInfoDto>? edwardsCurves = null;
     private IList<CurveInfoDto>? montgomeryCurves = null;
+    private IList<string>? mlDsa = null;
+    private IList<string>? slhDsa = null;
+    private IList<string>? mlKem = null;
 
     protected override async Task OnInitializedAsync()
     {
@@ -178,13 +253,13 @@ else
         this.profileName = profileInfo.ProfileName;
 
         await Task.Yield();
-        this.curves = await this.bouncyHsmClient.GetSupportedEcCurvesAsync();
-
-        await Task.Yield();
-        this.edwardsCurves = await this.bouncyHsmClient.GetSupportedEdwardsCurvesAsync();
-
-        await Task.Yield();
-        this.montgomeryCurves = await this.bouncyHsmClient.GetSupportedMontgomeryCurvesAsync();
+        SupportedKeysDto keys = await this.bouncyHsmClient.GetSupportedKeysAsync();
+        this.curves = keys.EcCurves.ToList();
+        this.edwardsCurves = keys.EdwardsCurves.ToList();
+        this.montgomeryCurves = keys.MontgomeryCurves.ToList();
+        this.mlDsa = keys.MlDsaKeys.ToList();
+        this.slhDsa = keys.SlhDsaKeys.ToList();
+        this.mlKem = keys.MlKemKeys.ToList();
     }
 
     private string ShowFlag(bool enabled)
@@ -202,5 +277,4 @@ else
             (true, true) => "✓"
         };
     }
-
 }
