--- a/src/Src/BouncyHsm.Spa/Pages/SupportedAlgorithms.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/SupportedAlgorithms.razor
@@ -29,9 +29,11 @@ else
     }
 
     <p>
-        Supported mechanisms are by default for PKCS#11 specification <a href="https://docs.oasis-open.org/pkcs11/pkcs11-curr/v2.40/os/pkcs11-curr-v2.40-os.pdf" target="_blank">version 2.40</a>.
-        <em>Bouncy&nbsp;Hsm</em> allows the use of some mechanisms from PKCS#11 specification <a href="https://docs.oasis-open.org/pkcs11/pkcs11-spec/v3.1/os/pkcs11-spec-v3.1-os.pdf" target="_blank">version 3.1</a>
-        and PKCS#11 specification <a href="https://docs.oasis-open.org/pkcs11/pkcs11-spec/v3.2/pkcs11-spec-v3.2.pdf" target="_blank">version 3.2</a>.
+        <em>Bouncy&nbsp;Hsm</em> provides PKCS#11 interfaces for versions <a href="https://docs.oasis-open.org/pkcs11/pkcs11-curr/v2.40/os/pkcs11-curr-v2.40-os.pdf" target="_blank">2.40<a/>,
+        <a href="https://docs.oasis-open.org/pkcs11/pkcs11-spec/v3.1/os/pkcs11-spec-v3.1-os.pdf" target="_blank">3.1</a>, 
+        and&nbsp;<a href="https://docs.oasis-open.org/pkcs11/pkcs11-spec/v3.2/pkcs11-spec-v3.2.pdf" target="_blank">3.2</a>; these versions are backward compatible.
+        The specification in which the mechanism was added is indicated for each mechanism.<br />
+        The mechanism can also be used in older versions of the native API.
     </p>
 
     <table class="table table-responsive-md table-striped table-bordered">
@@ -277,4 +279,5 @@ else
             (true, true) => "✓"
         };
     }
+
 }
