Fix some typos.

--- a/src/Src/BouncyHsm.Spa/Pages/GenerateKeyPages/GenerateKey.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/GenerateKeyPages/GenerateKey.razor
@@ -38,7 +38,7 @@ else
                         <option value="@GeneratedKeyType.Mongomery">Mongomery curve key pair</option>
                         <option value="@GeneratedKeyType.MlDsa">ML-DSA key pair</option>
                         <option value="@GeneratedKeyType.SlhDsa">SLH-DSA key pair</option>
-                        <option value="@GeneratedKeyType.MlKem">SLH-KEM key pair</option>
+                        <option value="@GeneratedKeyType.MlKem">ML-KEM key pair</option>
                         <option value="@GeneratedKeyType.Aes">AES key</option>
                         <option value="@GeneratedKeyType.Poly1305">POLY1305 key</option>
                         <option value="@GeneratedKeyType.ChaCha20">ChaCha20 key</option>
