--- a/src/Src/BouncyHsm.Spa/Shared/MainLayout.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/MainLayout.razor
@@ -13,7 +13,23 @@
 
         <BSToaster Position="BlazorStrap.Position.Fixed" />
         <article class="content px-4">
-            @Body
+            <ErrorBoundary>
+                <ChildContent>
+                    @Body
+                </ChildContent>
+                <ErrorContent Context="exception">
+                    <div class="text-danger">
+                        @if (exception is BouncyHsm.Client.ApiBouncyHsmException<BouncyHsm.Client.ProblemDetails> apiException)
+                        {
+                            @apiException.Result.Detail
+                        }
+                        else
+                        {
+                            @exception.Message
+                        }
+                    </div>
+                </ErrorContent>
+            </ErrorBoundary>
         </article>
     </main>
     <SectionOutlet SectionName="botton-area" />
