Migrate to Blazor in .NET 10

--- a/src/Src/BouncyHsm.Spa/Pages/ApplicationConnections.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/ApplicationConnections.razor
@@ -1,4 +1,5 @@
 ﻿@page "/ApplicationConnections"
+@rendermode InteractiveWebAssembly
 @using BouncyHsm.Client
 @inject IBouncyHsmClient bouncyHsmClient
 
