--- a/src/Src/BouncyHsm.Spa/Pages/DownloadP11.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/DownloadP11.razor
@@ -1,4 +1,5 @@
 ﻿@page "/DownloadP11"
+@rendermode InteractiveWebAssembly
 @using BouncyHsm.Spa.Shared.ForDownloadP11
 
 <PageTitle>Download PKCS#11 libs</PageTitle>
