--- a/src/Src/BouncyHsm.Spa/Pages/GenerateKeyPages/GenerateKey.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/GenerateKeyPages/GenerateKey.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Slots/{SlotId:int}/GenerateKey"
+@rendermode InteractiveWebAssembly
 @using BouncyHsm.Client;
 @using BouncyHsm.Spa.Shared.ForGenerateKey
 @inject IBouncyHsmClient bouncyHsmClient
