--- a/src/Src/BouncyHsm.Spa/Pages/LogViewer.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/LogViewer.razor
@@ -1,4 +1,5 @@
 ﻿@page "/LogViewer"
+@rendermode InteractiveWebAssembly
 @using BouncyHsm.Spa.Client.Services.Client;
 @using BouncyHsm.Spa.Client;
 @using BouncyHsm.Client
