--- a/src/Src/BouncyHsm.Spa/Pages/PkcsPages/GenerateSelfSignedCert.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/PkcsPages/GenerateSelfSignedCert.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Slots/{SlotId:int}/Pkcs/GenerateSelfSignedCert/{PrivateKeyId:guid}/{PublicKeyId:guid}"
+@rendermode InteractiveWebAssembly
 @using BouncyHsm.Spa.Pages.Pkcs;
 @using BouncyHsm.Client
 @using BouncyHsm.Spa.Utils;
