--- a/src/Src/BouncyHsm.Spa/Pages/SlotsPages/ObjectDetail.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/SlotsPages/ObjectDetail.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Slots/Detail/{Id:int}/object/{ObjectId:guid}"
+@rendermode InteractiveWebAssembly
 @using BouncyHsm.Client
 @using BouncyHsm.Spa.Shared.ForSlotPages
 @inject IBouncyHsmClient bouncyHsmClient
