--- a/src/Src/BouncyHsm.Spa/Pages/SupportedAlgorithms.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/SupportedAlgorithms.razor
@@ -1,4 +1,5 @@
 ﻿@page "/SupportedAlgorithms"
+@rendermode InteractiveWebAssembly
 @using BouncyHsm.Client
 @using BouncyHsm.Spa.Shared.ForSupportedAlgorithms
 @inject IBouncyHsmClient bouncyHsmClient
