--- a/src/Src/BouncyHsm.Spa/Shared/Common/CopyBtn.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/Common/CopyBtn.razor
@@ -1,4 +1,5 @@
-﻿@using BlazorStrap;
+﻿@rendermode InteractiveWebAssembly
+@using BlazorStrap
 @inject IJSRuntime JsRuntime
 @inject IBlazorStrap blazorStrap
 
