--- a/src/Src/BouncyHsm.Spa/Shared/Common/ErrorAlert.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/Common/ErrorAlert.razor
@@ -1,4 +1,6 @@
-﻿<div class="alert alert-danger" role="alert">
+﻿@rendermode InteractiveWebAssembly
+
+<div class="alert alert-danger" role="alert">
     <span class="icon-fire"></span> @this.Message
 </div>
 
