--- a/src/Src/BouncyHsm.Spa/Shared/Common/LoadingIndicator.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/Common/LoadingIndicator.razor
@@ -1,4 +1,5 @@
-﻿<div class="position-relative">
+﻿@rendermode InteractiveWebAssembly
+<div class="position-relative">
   <div class="position-absolute start-50">
         <span class="icon-spinner8 icon-4x icn-spinner"></span>
   </div>
