--- a/src/Src/BouncyHsm.Spa/Shared/ForLogViewer/LogLevelBadge.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/ForLogViewer/LogLevelBadge.razor
@@ -1,4 +1,6 @@
-﻿<span class="@GetLogLevelBaggeStyle()">@this.Level</span>
+﻿@rendermode InteractiveWebAssembly
+
+<span class="@GetLogLevelBaggeStyle()">@this.Level</span>
 
 @code {
     [Parameter]
