--- a/src/Src/BouncyHsm.Spa/Shared/ForSlotPages/AttrBoolEdit.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/ForSlotPages/AttrBoolEdit.razor
@@ -1,4 +1,5 @@
-﻿@using BouncyHsm.Client
+﻿@rendermode InteractiveWebAssembly
+@using BouncyHsm.Client
 
 <h5 class="mt-2">Original value</h5>
 <code>@this.AttributeValue.ValueAsBool</code>
