--- a/src/Src/BouncyHsm.Spa/Shared/ForSlotPages/AttrByteArrayEdit.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/ForSlotPages/AttrByteArrayEdit.razor
@@ -1,4 +1,5 @@
-﻿@using BouncyHsm.Client
+﻿@rendermode InteractiveWebAssembly
+@using BouncyHsm.Client
 @using System.Text
 <h5 class="mt-2">Original value</h5>
 <content class="text-container">
