--- a/src/Src/BouncyHsm.Spa/Shared/ProtectedAuthPath/ProtectedAuthPathSwitch.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/ProtectedAuthPath/ProtectedAuthPathSwitch.razor
@@ -1,4 +1,5 @@
-﻿<div class="form-check form-switch ms-5">
+﻿@rendermode InteractiveWebAssembly
+<div class="form-check form-switch ms-5">
     <label class="form-check-label" >
     <input class="form-check-input" type="checkbox"  @bind="this.isEnabled">
         @if (this.isEnabled)
