--- a/src/Src/BouncyHsm.Spa/Pages/PkcsPages/GenerateCsr.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/PkcsPages/GenerateCsr.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Slots/{SlotId:int}/Pkcs/GenerateCsr/{PrivateKeyId:guid}/{PublicKeyId:guid}"
+@rendermode InteractiveWebAssembly
 @using BouncyHsm.Spa.Pages.Pkcs;
 @using BouncyHsm.Client
 @using BouncyHsm.Spa.Utils;
