--- a/src/Src/BouncyHsm.Spa/Pages/PkcsPages/ImportCert.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/PkcsPages/ImportCert.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Slots/{SlotId:int}/Pkcs/ImportCert/{PrivateKeyId:guid}"
+@rendermode InteractiveWebAssembly
 @using BouncyHsm.Spa.Pages.Pkcs;
 @using BouncyHsm.Client
 @using BouncyHsm.Spa.Utils;
