--- a/src/Src/BouncyHsm.Spa/Pages/PkcsPages/ImportP12.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/PkcsPages/ImportP12.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Slots/{SlotId:int}/Pkcs/ImportP12"
+@rendermode InteractiveWebAssembly
 @using BouncyHsm.Spa.Pages.Pkcs;
 @using BouncyHsm.Client
 @using BouncyHsm.Spa.Utils;
