--- a/src/Src/BouncyHsm.Spa/Pages/PkcsPages/Index.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/PkcsPages/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Slots/{SlotId:int}/Pkcs"
+@rendermode InteractiveWebAssembly
 @using BouncyHsm.Client
 @using BouncyHsm.Spa.Utils
 @inject IBouncyHsmClient bouncyHsmClient
