--- a/src/Src/BouncyHsm.Spa/Pages/SlotsPages/CreateSlot.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/SlotsPages/CreateSlot.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Slots/Create"
+@rendermode InteractiveWebAssembly
 @using BouncyHsm.Client
 @inject IBouncyHsmClient bouncyHsmClient
 @inject NavigationManager Navigation
