--- a/src/Src/BouncyHsm.Spa/Pages/SlotsPages/Detail.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/SlotsPages/Detail.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Slots/Detail/{Id:int}"
+@rendermode InteractiveWebAssembly
 @using BouncyHsm.Client
 @inject IBouncyHsmClient bouncyHsmClient
 @inject NavigationManager Navigation
