--- a/src/Src/BouncyHsm.Spa/Pages/SlotsPages/SlotSettings.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/SlotsPages/SlotSettings.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Slots/{Id:int}/Settings"
+@rendermode InteractiveWebAssembly
 @using BouncyHsm.Client
 @inject IBouncyHsmClient bouncyHsmClient
 @inject NavigationManager Navigation
