--- a/src/Src/BouncyHsm.Spa/Shared/Common/DangerOperationBtn.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/Common/DangerOperationBtn.razor
@@ -1,4 +1,5 @@
-﻿@using BlazorStrap
+﻿@rendermode InteractiveWebAssembly
+@using BlazorStrap
 @using BlazorStrap.Shared.Components.Modal;
 
 <BSModal @ref="this.modalRef" HasCloseButton="true" IsStaticBackdrop="true">
