--- a/src/Src/BouncyHsm.Spa/Shared/ForDownloadP11/DownloadCard.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/ForDownloadP11/DownloadCard.razor
@@ -1,4 +1,5 @@
-﻿<div class="card mb-2">
+﻿@rendermode InteractiveWebAssembly
+<div class="card mb-2">
     <div class="card-header">
         @this.Platform @this.Architecture
     </div>
