--- a/src/Src/BouncyHsm.Spa/Shared/ForGenerateKey/GenerateChaChaKey.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/ForGenerateKey/GenerateChaChaKey.razor
@@ -1,4 +1,5 @@
-﻿@using BouncyHsm.Client;
+﻿@rendermode InteractiveWebAssembly
+@using BouncyHsm.Client
 @inject IBouncyHsmClient bouncyHsmClient
 @inject NavigationManager Navigation
 @inject ILogger<GenerateRsaKeys> logger
