--- a/src/Src/BouncyHsm.Spa/Shared/ForIndex/Card.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/ForIndex/Card.razor
@@ -1,4 +1,5 @@
-﻿<div class="card border-@(ColorClassName) mb-3">
+﻿@rendermode InteractiveWebAssembly
+<div class="card border-@(ColorClassName) mb-3">
     <div class="card-content">
         <div class="card-body">
             <div class="media d-flex justify-content-between">
