--- a/src/Src/BouncyHsm.Spa/Shared/ForIndex/Dashboard.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/ForIndex/Dashboard.razor
@@ -1,4 +1,5 @@
-﻿@using BouncyHsm.Client
+﻿@rendermode InteractiveWebAssembly
+@using BouncyHsm.Client
 @inject IBouncyHsmClient bouncyHsmClient
 
 <div class="row">
