--- a/src/Src/BouncyHsm.Spa/Shared/ForLogViewer/LogRow.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/ForLogViewer/LogRow.razor
@@ -1,4 +1,5 @@
-﻿@using BouncyHsm.Spa.Client.Services.Client;
+﻿@rendermode InteractiveWebAssembly
+@using BouncyHsm.Spa.Client.Services.Client
 
 <div class="row bg-white smallest-font">
     <div class="col-2 pointer-cursor">@this.Log.Timestamp</div>
