--- a/src/Src/BouncyHsm.Spa/Shared/ForPkcsPages/IndexActionButtons.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/ForPkcsPages/IndexActionButtons.razor
@@ -1,4 +1,5 @@
-﻿@using BouncyHsm.Client
+﻿@rendermode InteractiveWebAssembly
+@using BouncyHsm.Client
 @using BouncyHsm.Spa.Utils
 @inject IBouncyHsmClient bouncyHsmClient
 @inject NavigationManager Navigation
