--- a/src/Src/BouncyHsm.Spa/Shared/ForSlotPages/AttrStringEdit.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/ForSlotPages/AttrStringEdit.razor
@@ -1,4 +1,5 @@
-﻿@using BouncyHsm.Client
+﻿@rendermode InteractiveWebAssembly
+@using BouncyHsm.Client
 <h5 class="mt-2">Original value</h5>
 <pre style="max-height:25%;">@this.AttributeValue.ValueAsString</pre>
 
