--- a/src/Src/BouncyHsm.Spa/Shared/ForSupportedAlgorithms/Pkcs11Version.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/ForSupportedAlgorithms/Pkcs11Version.razor
@@ -1,4 +1,5 @@
-﻿@using BouncyHsm.Client
+﻿@rendermode InteractiveWebAssembly
+@using BouncyHsm.Client
 @if (this.Version != Pkcs11SpecVersion.V2_40)
 {
     <sub>@this.GetVersion()</sub>
