--- a/src/Src/BouncyHsm.Spa/Shared/NavMenu.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@rendermode InteractiveWebAssembly
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">
             <img src="BouncyHsm64x64.png?v=1" style="width:2em; height: 2em;" />
