--- a/src/Src/BouncyHsm.Spa/Shared/ProtectedAuthPath/ProtectedAuthPathDialog.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/ProtectedAuthPath/ProtectedAuthPathDialog.razor
@@ -1,4 +1,5 @@
-﻿@using BlazorStrap
+﻿@rendermode InteractiveWebAssembly
+@using BlazorStrap
 @using Microsoft.AspNetCore.SignalR.Client
 @using Microsoft.AspNetCore.Components.Sections
 @implements IAsyncDisposable
