Add mb-4 to main view in SPA.

--- a/src/Src/BouncyHsm.Spa/Shared/MainLayout.razor
+++ b/src/Src/BouncyHsm.Spa/Shared/MainLayout.razor
@@ -6,7 +6,7 @@
         <NavMenu />
     </div>
 
-    <main>
+    <main class="mb-4">
         <div class="top-row px-4">
             <a href="swagger/index.html" target="_blank">Swagger UI</a>
         </div>
