--- a/src/Src/BouncyHsm.Spa/Routes.razor
+++ b/src/Src/BouncyHsm.Spa/Routes.razor
@@ -3,7 +3,7 @@
     <Router AppAssembly="typeof(Program).Assembly" NotFoundPage="typeof(BouncyHsm.Spa.Pages.NotFound)">
         <Found Context="routeData">
             <RouteView RouteData="routeData" DefaultLayout="typeof(BouncyHsm.Spa.Shared.MainLayout)" />
-            <FocusOnNavigate RouteData="routeData" Selector="h1" />
+            @* <FocusOnNavigate RouteData="routeData" Selector="h1" /> *@
         </Found>
     </Router>
 }
