--- a/src/Src/BouncyHsm.Spa/Pages/Slots.razor
+++ b/src/Src/BouncyHsm.Spa/Pages/Slots.razor
@@ -85,6 +85,10 @@ else
                                     <td>@slot.Token.SimulateQualifiedArea</td>
                                 </tr>
                                 <tr>
+                                    <td>Public Crypto:</td>
+                                    <td>@slot.Token.EnablePublicCrypto</td>
+                                </tr>
+                                <tr>
                                     <td>Protected auth. path:</td>
                                     <td>@slot.Token.SimulateProtectedAuthPath</td>
                                 </tr>
